...
    );
  };

  const OPTIONS = [
    { title: "My Profile", screen: "more-profile", icon: "account" },
    { title: "Store", screen: "more-store", icon: "shopping" },
    { title: "Settings", screen: "more-settings", icon: "cog-outline" },
    { title: "Security", screen: "more-security", icon: "shield-lock" },
    { title: "Logout", action: handleLogout, icon: "logout" },
  ];

  const renderItem = ({ item }: any) => (
    <TouchableOpacity
...
    </TouchableOpacity>
  );

  return (
    <AppContainer withScrollView={false}>
      <Text style={[typography.textXl, typography.fontBold, { marginTop: Platform.OS === "android" ? 16 : 0 }]}>
        More Options
      </Text>

      <FlatList
        data={OPTIONS}
        renderItem={renderItem}
        keyExtractor={(item) => item.title}
...
